Tue Jun 29 23:24:44 CEST 2004 (tk)
----------------------------------
  * doc: update

Tue Jun 29 16:27:47 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Support --timeout option

Tue Jun 29 09:27:42 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Up-issued

Mon Jun 28 12:46:18 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Optimise the scanning of empty sections of e-mails

Mon Jun 28 09:36:34 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Don't error when creating the quarantine directory if it
	already exists

Sun Jun 27 09:12:29 CEST 2004 (tk)
----------------------------------
  * support Windows SFU (thanks to Brian A. Reiter <breiter*wolfereiter.com>)

Sat Jun 26 14:17:11 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Added missing newline from the end of the
	warning message that appears when scanning a uuencoded email that
	contains lines that are too long

Fri Jun 25 15:17:37 BST 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: fix error path crash

Fri Jun 25 14:57:06 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Optimise the scanning of emails that don't have
	other emails within them.

Thu Jun 24 22:38:16 BST 2004 (njh)
----------------------------------
  * libclamav:	Plug small memory leak when scanning emails with a large
	number of attachments
		Handle uuencoded files created with buggy software

Thu Jun 24 09:09:27 BST 2004 (trog)
-----------------------------------
  * libclamav ole2_extract.[ch],scanners.c: proper file accounting (original patch
	from Maxim Dounin)

Wed Jun 23 17:23:59 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Further optimisation in the handling of empty lines
	in emails

Wed Jun 23 15:16:20 BST 2004 (trog)
-----------------------------------
  * libclamav/ole2_extract.c: fix possible mmap overrun.
