@@ -469,8 +469,13 @@ static void ole2_walk_property_tree(int fd, ole2_header_t *hdr, const char *dir,
 		return;
 	}
 	
-	if(limits && limits->maxfiles && (*file_count > limits->maxfiles)) {
+	if (limits && limits->maxfiles && (*file_count > limits->maxfiles)) {
 		cli_dbgmsg("OLE2: File limit reached (max: %d)\n", limits->maxfiles);
+		return;
+	}
+	
+	if (limits && limits->maxreclevel && (rec_level > limits->maxreclevel)) {
+		cli_dbgmsg("OLE2: Recursion limit reached (max: %d)\n", limits->maxreclevel);
 		return;
 	}
 	
